# rejs

./: LICENSE  README.md  __init__.py  justfile  pyproject.toml  session.py
rejs/: config.py  main.py  pyproject.toml  session.py
rejs/src/: session.py
rejs/src/rejs/: __init__.py  config.py  session.py
rejs/tests/: test_session.py
